Add on_hold status support